@@ -1,3 +1,7 @@
+2019-10-24 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/geda/geda_toplevel.c: Add function documentation.
+
 2019-10-23 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/geda/geda_toplevel.c: Add function geda_toplevel_get_untitled_name.
